let him cook